Made get product by id
