# server/common/api.yml
@@ -603,6 +603,31 @@ paths:
           description: Successful removed from cart
         401:
           description: Invalid password or username
+  /order/getorderbyid:
+    get:
+      tags:
+        - Order
+      security:
+        - bearerAuth: []
+      summary: Get order by id
+      description: Get order by id
+      parameters:
+        - in: query
+          name: order_id
+          description: Pass order id
+          schema:
+            type: string
+            description: get order data from the order id
+
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Return the order data
+        404:
+          description: Order not found / Unauthorized
   /order/getorderforseller:
     get:
       tags:
